# rhumb

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: workflow.yml
docs/: framework-popularity-report.md  journey-architecture.md  journey-expo-router.md  journey-react-router.md  journey-tanstack-router.md
examples/tanstack-kitchen-sink/: README.md  journeys.json  render_gif.py
src/deterministic_kit/: __init__.py  analysis.py  cli.py  framework.py  graphify_runner.py  instrument.py  journey.py
src/deterministic_kit/journeys/: __init__.py  base.py  expo_router.py  paths.py  react_router.py  registry.py  sveltekit.py  tanstack_router.py  types.py  vue_router.py
src/rhumb/: __init__.py  analysis.py  cli.py  framework.py  graphify_runner.py  instrument.py  journey.py
src/rhumb/journeys/: __init__.py  base.py  expo_router.py  paths.py  react_router.py  registry.py  sveltekit.py  tanstack_router.py  vue_router.py
src/tributary/: __init__.py  analysis.py  cli.py  graphify_runner.py  instrument.py  journey.py
src/tributary/journeys/: __init__.py  base.py  expo_router.py  parse_js.py  paths.py  react_router.py  registry.py  sveltekit.py  tanstack_router.py  vue_router.py
tests/: test_api.py  test_expo_router_routes.py  test_journey_paths.py  test_react_router_routes.py  test_tanstack_router_routes.py
