[project]
name = "rhumb"
version = "0.1.0"
description = "Rhumb: constant-bearing journeys through your app. Static journey mapping from frontend source."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Satnam Singh" },
]
keywords = [
    "journeys",
    "routing",
    "react-router",
    "tanstack-router",
    "expo-router",
    "nextjs",
    "static-analysis",
    "posthog",
    "frontend",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "graphifyy>=0.9.11",
    "tree-sitter>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/satnam-sandhu/rhumb"
Documentation = "https://github.com/satnam-sandhu/rhumb#readme"
Repository = "https://github.com/satnam-sandhu/rhumb"
Issues = "https://github.com/satnam-sandhu/rhumb/issues"

[project.scripts]
rhumb = "rhumb.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "rhumb"
module-root = "src"
